--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -26,6 +26,6 @@ jobs:
         working-directory: ./terraform
         run: terraform init
 
-      - name: Terraform Destroy
+      - name: Terraform Destroy All
         working-directory: ./terraform
         run: terraform destroy -auto-approve
